--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, illo voluptas nostrum reprehenderit, facilis labore doloribus provident impedit totam ea natus commodi eos quaerat praesentium, deserunt sed veritatis repellat minus.</h1>
     <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam rerum non assumenda ratione enim, modi voluptas temporibus deleniti voluptatem illo pariatur tenetur. A, quibusdam et. Hic facilis animi quae quidem.</h2>
     <p>Primer párrafo</p>
-    <center><img src="stanmall.jpg." alt="richard"></center>
+    <center><img src="stanmall.jpg" alt="richard"></center>
 </body>
 </html>
